# flk-crud-backend

./: .env  Dockerfile  README.md  compose.yml  manage.py  pyproject.toml  railway.json
_apps/api/: apps.py  models.py  serializers.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
_apps/api/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py  wsgi.py
